sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:8: error: ')' expected but '}' found.
    }
    ^