sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  for (i<-0 until getSize()){
    for(j<-i until getSize()){
      if ((getColor(i)==BLUE && getColor(j)== WHITE) || (getColor(i)==BLUE && getColor(j)==RED) || (getColor(i)==WHITE && getColor(j)==RED){
        swap(i,j)
      }
    }
  }
}